# purplepp

./: CMakeLists.txt  README.md
include/purple++/: library.h  purple++.h
include/purple++/core/: account.h  blist.h  connection.h  conversation.h  saved_status.h  status.h
include/purple++/detail/: internal.h  lambda_visitor.h  util.h
src/: CMakeLists.txt  library.cpp
src/core/: account.cpp  blist.cpp  connection.cpp  conversation.cpp  saved_status.cpp  status.cpp
src/detail/: internal.cpp  util.cpp
